<resources>
    <string name="app_name">Number Counter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_app_quit">Do you want to quit?</string>
    <string name="new_counter">New counter</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="counter_name">Counter name</string>
    <string name="counter_value">Counter value</string>
    <string name="app_eval">App Evaluation</string>
    <string name="app_inquire">Contact us</string>
    <string name="msg_touch_vibration">Vibrate when touching.</string>
    <string name="msg_touch_sound">Allows you to hear the sound when you touch it.</string>
    <string name="msg_back_touch_increase">배경 터치시 숫자가 증가합니다.</string>
    <string name="msg_quit">Are you sure you want to quit?</string>
    <string name="app_ver_name">App Version</string>
    <string name="app_version">2.5.0</string>
    <string name="msg_add">+ Add</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="msg_prepare">Comming soon.</string>
    <string name="save_list">Save list</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="no_name">No Title</string>
    <string name="msg_save">Saved.</string>
    <string name="msg_delete_confirm">Are you sure you want to delete it?</string>
    <string name="introduce">
제작 : 개발자 사슴\n\n
꿈을 갖고 IT 업에 종사하고 있는 사슴을 좋아하는 피아노치는 프로그래머 청년입니다. 단순히 내가 운동이나 악기연습을 하던도중 숫자가 헷갈릴 때, 저 같은 분들을 위해 편리하게 이용해주셨으면 하는 바램에 개발되었습니다.
이 앱을 다운로드해주신 모든 분들에게 진심으로 감사를 표하며, 개발 관련한 질문 및 건의, 상담은 언제든 환영한다는 말씀과 문제가 있을 시 적극적으로 시정하겠다는 말씀을 드립니다~
\n\n</string>
<string name="blog">블로그 : https://blog.naver.com/deersoul6662\n</string>
<string name="mail">메일 : deersoul6662@naver.com</string>
    </resources>
