<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:title="@string/msg_add" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_email"
            android:title="@string/app_inquire" />
        <item
            android:id="@+id/nav_app_eval"
            android:title="@string/app_eval" />
    </group>
    <group android:id="@+id/save_list" android:checkableBehavior="single">

    </group>
<!--

    <item android:title="@string/save_list">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="개발 예정1" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="개발 예정2" />
        </menu>
    </item>
-->

</menu>
